--- a/style.css
+++ b/style.css
@@ -7,20 +7,54 @@
     font-size: 2vw;
 }
 
+a{
+    color: orangered;
+    text-decoration: none;
+}
+
+#container-center{
+    width: 100vw;
+}
+
+.text{
+    font-family: 'Inconsolata', monospace;
+    font-style: italic;
+    width: 100%;
+    text-align: center;
+    font-size: 15pt;
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%; 
+    margin-bottom: 2vh;
+}
+
 #kptn{
     font-family: 'Inconsolata', monospace;
     font-weight: bolder;
     font-style: italic;
     width: 100%;
     text-align: center;
+    font-size: 5vw;
+}
+
+#name{
+    width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
     border-bottom: solid black 5px ;
     border-top: solid black 5px ;
-    font-size: 50pt;
 }
 
-img{
+#name h2{
+    font-family: 'Inconsolata', monospace;
+    font-weight: bold;
+    font-style: italic;
+    width: 100%;
+    text-align: center;
+    font-size: 2.19vw;
+}
+
+#img-me{
     width: 20%;
     margin-left: 40%;
     margin-right: 40%;
