--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html{
+    font-family: 'Inconsolata', monospace;
+    font-style: italic;
+}
+
 .bandeau{
     font-family: 'Inconsolata', monospace;
     font-weight: bolder;
@@ -14,6 +19,12 @@ a{
 
 #container-center{
     width: 100vw;
+}
+
+#menu{
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .text{
@@ -38,6 +49,7 @@ a{
 }
 
 #name{
+    padding: 2vh;
     width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -58,6 +70,5 @@ a{
     width: 20%;
     margin-left: 40%;
     margin-right: 40%;
-    margin-top: 20px;
     margin-bottom: 20px;
 }
